--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ html {
 	background-image: url("../images/hadouken.gif");
 	width: 150px;
 	height: 90px;
+	margin-left: -40px;
 	display: none;
 	float: left;
 	position: relative;
@@ -108,6 +109,7 @@ html {
 	-webkit-filter: hue-rotate(270deg);
 	width: 150px;
 	height: 90px;
+	margin-right: -40px;
 	display: none;
 	float: right;
 	position: relative;
@@ -169,5 +171,23 @@ html {
  	margin-left: 200px;
  }
 
+.smallscreen {
+	display: none;
+	color: white;
+	text-align: center;
+	margin-top: 100px;
+	font-size: 30px;
+	font-family: Acme;
+	font-style: italic;
+}
 
 
+@media only screen and (max-width: 1199px) {
+	.main {
+		display: none;
+	}
+
+	.smallscreen {
+		display: block;
+	}
+}
